# uservice-webapi/schema/openapi/main.yaml
@@ -1,7 +1,7 @@
 openapi: 3.1.0
 info:
-  title: Sample API
-  description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
+  title: Fin2Set API
+  description: Public operations exposed by Fin2Set
   version: 0.1.9
 servers:
   - url: http://api.example.com/v1
@@ -9,6 +9,20 @@ servers:
   - url: http://staging-api.example.com
     description: Optional server description, e.g. Internal staging server for testing
 paths:
+  /api/chat_initial_message:
+    get:
+      summary: Initial message from Assistant if it may initiate the discussion
+      description: Creates initial message of AI, based on what the AI is capable to offer. Better replacemend of *Hello, I am CHat GPT, how can I help you today?*
+      tags:
+        - Chat
+      operationId: welcomeMessage
+      responses:
+        '200':
+          description: Welcome message
+          content:
+            application/json:
+              schema:
+                type: string
   /api/create_link_token:
     get:
       summary: Returns curent version of backend
